# a-tokenizer-library

./: BUILDING.md  CMakeLists.txt  Dockerfile  NOTICE  README.md  build.sh
include/a-tokenizer-library/: atl_cursor.h  atl_token.h
src/: atl_cursor.c  atl_token.c
tests/: CMakeLists.txt
tests/src/: parse.c  parse_expression.c
